# SFSS

./: README.md
SecureFileStorageSystem/: .env.template  pyproject.toml  requirements.txt  setup.py
SecureFileStorageSystem/docs/: architecture.md
SecureFileStorageSystem/src/: config.py  sfss_cli.py
SecureFileStorageSystem/src/auth/: github_oauth.py
SecureFileStorageSystem/src/storage/: encryptor.py  file_manager.py  metadata_handler.py
SecureFileStorageSystem/src/utils/: logger.py  rate_limiter.py  session_handler.py  validators.py
SecureFileStorageSystem/tests/: conftest.py
SecureFileStorageSystem/tests/integration/: test_file_manager.py  test_github_oauth.py  test_session_handler.py
SecureFileStorageSystem/tests/unit/: test_encryptor.py  test_logger.py  test_metadata_handler.py  test_rate_limiter.py  test_validators.py
